Fix Clang 19 warnings in Windows https://bugs.webkit.org/show_bug.cgi?id=280071

Reviewed by Fujii Hironori.

Fixes any warnings generated while doing a non-unified build with Clang 19.1.0.

* Source/JavaScriptCore/interpreter/CallFrame.h:
* Source/WebCore/platform/win/SystemInfo.cpp:
(WebCore::isWOW64):
(WebCore::processorArchitecture):
* Source/WebKit/WebProcess/InjectedBundle/win/InjectedBundleWin.cpp:
(WebKit::InjectedBundle::initialize):

Canonical link: https://commits.webkit.org/284013@main