Source/WebCore/platform/win/SystemInfo.cpp
@@ -117,7 +117,7 @@ static bool isWOW64()
         if (!kernel32Module)
             return wow64;
         typedef BOOL (WINAPI* IsWow64ProcessFunc)(HANDLE, PBOOL);
-        IsWow64ProcessFunc isWOW64Process = reinterpret_cast<IsWow64ProcessFunc>(GetProcAddress(kernel32Module, "IsWow64Process"));
+        IsWow64ProcessFunc isWOW64Process = reinterpret_cast<IsWow64ProcessFunc>((void*)GetProcAddress(kernel32Module, "IsWow64Process"));
         if (isWOW64Process) {
             BOOL result = FALSE;
             wow64 = isWOW64Process(GetCurrentProcess(), &result) && result;
@@ -138,7 +138,7 @@ static WORD processorArchitecture()
         if (!kernel32Module)
             return architecture;
         typedef VOID (WINAPI* GetNativeSystemInfoFunc)(LPSYSTEM_INFO);
-        GetNativeSystemInfoFunc getNativeSystemInfo = reinterpret_cast<GetNativeSystemInfoFunc>(GetProcAddress(kernel32Module, "GetNativeSystemInfo"));
+        GetNativeSystemInfoFunc getNativeSystemInfo = reinterpret_cast<GetNativeSystemInfoFunc>((void*)::GetProcAddress(kernel32Module, "GetNativeSystemInfo"));
         if (getNativeSystemInfo) {
             SYSTEM_INFO systemInfo;
             ZeroMemory(&systemInfo, sizeof(systemInfo));
